@@ -1,0 +1,1 @@
+fix docs (latexpdf missing, no man target)
